# saedemo

backend/: CMakeLists.txt  README.md
backend/aminer/: CMakeLists.txt  aminerdata.hpp  aminerimporter.cpp
backend/base/: CMakeLists.txt  entitysearcher.hpp  indexedgraph.hpp  interface.proto  main.cpp  searchservice.hpp
backend/pminer/: CMakeLists.txt  pminer.hpp  pminerdata.hpp  pminerimporter.cpp  pminerservice.cpp
backend/src/: CMakeLists.txt  aminer.hpp  aminerdata.cpp  aminerdata.hpp  aminerdata_test.cpp  aminerimporter.cpp  analyze.cpp  analyze.hpp  csvreader.cpp  csvreader.hpp  expert_searcher.cpp  expert_searcher.hpp  features.cpp  features.hpp  group_searcher.cpp  group_searcher.hpp  interface.proto  main.cpp  med_expert_searcher.hpp  pminer.hpp  pminerdata.cpp  pminerdata.hpp  pminerimporter.cpp  pubmed.hpp  pubmeddata.cpp  pubmeddata.hpp  pubmedimporter.cpp  search.cpp  search.hpp  support_doc_searcher.hpp  test.cpp  user_searcher.cpp  user_searcher.hpp  weibo.hpp  weibodata.cpp  weibodata.hpp  weiboimporter.cpp
backend/weibo/: CMakeLists.txt  chinesetokenstream.cpp  chinesetokenstream.hpp  weibo.hpp  weibodata.hpp  weiboservice.cpp
frontend/: caching_proxy.py  influence.tpl  influence_analysis.py  influence_analysis_patent.py  influence_topics.tpl  knowledge_drift.tpl  layout.tpl  network_integration.py  search.tpl  server.py
frontend/knowledge_drift/: knowledge_drift.py  knowledge_drift_analysis - Copy.py  knowledge_drift_analysis.py
frontend/saeclient/: interface_pb2.py  saeclient.py
frontend/static/: influence.js
frontend/static/js/: topictrend-back1.js  topictrend.js
